--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import"https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Ubuntu:wght@300;400;500;700&display=swap";.mat-badge-content {
+    font-weight: 600;
+    font-size: 12px;
+    font-family: Roboto,Helvetica Neue,sans-serif
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
